# DetectText

./: CMakeLists.txt  FeaturesMain.cpp  README  README.md  TextDetection.cpp  TextDetection.h
